# g3d-core

./: README.md
include/: g3d-core.h
source/: CMakeLists.txt  cube-map.cpp  cube-map.h  ecs-base.h  entity-factory.cpp  entity-factory.h  entity.h  g3d-engine.cpp  g3d-engine.h  g3d-input.cpp  g3d-input.h  g3d-render-config.h  g3d-renderer.cpp  g3d-renderer.h  gclass.h  geometric-partition.cpp  geometric-partition.h  image-loader.cpp  image-loader.h  image.h  mesh.h  mipmap-generator.cpp  mipmap-generator.h  pbr-material.cpp  pbr-material.h  scene-capture.cpp  scene-capture.h  scene-commands.cpp  scene-commands.h  scene-graph.h  type-registry.h  world.h
source/allocators/: allocator-v2.h  allocator.h  bin-allocator-meta.h  bin-allocator-v2.h  bin-allocator.h  g3d-stack-allocator.h  id-type.h  pooled-allocator-base.h  pooled-allocator-manager.h  pooled-allocator.h
source/components/: camera-component.cpp  camera-component.h  component-base.h  component-pool.h  cubemap-capture-component.h  material-component.h  renderable-component.h  renderable.h  transform-component.cpp  transform-component.h  world-transform-component.cpp  world-transform-component.h
source/frame-graph/: fg-action-node.h  fg-binary-sequence-node.h  fg-do-once-node.h  fg-for-each-node.h  fg-for-loop-node.h  fg-node.cpp  fg-node.h  fg-sequence-node.h  frame-graph.cpp  frame-graph.h
source/subsystems/: rendering-subsystem.h
source/subsystems/engine/: engine-subsystem.cpp  engine-subsystem.h
source/subsystems/geometry/: geometry-subsystem.cpp  geometry-subsystem.h
source/subsystems/material/: material-subsystem.cpp  material-subsystem.h
source/subsystems/pipeline/: pipeline-subsystem.cpp  pipeline-subsystem.h
source/subsystems/rendering/: rendering-subsystem.cpp  rendering-subsystem.h
